update-增加高级版jdk17后的参数